Panels and tables

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -27,6 +27,7 @@
     'modules/_tables',
     'modules/_media',
     'modules/_state',
+    'modules/_panels',
     'modules/_alerts',
     'modules/_animations';
 
@@ -36,7 +37,6 @@
     'extensions/_ext_button_transparent',
     'extensions/_ext_form_stacked',
     'extensions/_ext_fieldset_stacked',
-    'extensions/_ext_dropdown_normal',
     'extensions/_ext_nav_rdio';
 
 /* Import Themes */
