--- a/scss/modules/_dropdowns.scss
+++ b/scss/modules/_dropdowns.scss
@@ -18,38 +18,18 @@
     border-style: solid;
     border-color: $dropdown-border-color;
     border-width: $dropdown-border-width;
-    padding: $dropdown-ul-padding;
-    background-color: $dropdown-menu-bgcolor;
-    max-width: $dropdown-max-width;
+    background-color: $dropdown-bgcolor;
 
     @if $dropdown-use-radius {
         @include border-radius($form-radius);
     }
 
-    > li {
-        @extend %nowrap;
-        padding: $dropdown-li-padding;
-
-        > a {
-            display: block;
-            padding: $dropdown-a-padding;
-
-            &, &:hover {
-                text-decoration: none;
-            }
-        }
-
-        &.separator, &.hr {
-            border-color: $dropdown-separator-color;
-            border-style: solid;
-            border-width: 0;
-            border-bottom-width: $dropdown-separator-width;
-            margin: $dropdown-separator-margin;
-        }
-    }
-
-    &.content {
-        padding: $dropdown-content-padding;
+    @if $dropdown-align == left {
+        left: 0;
+        right: inherit;
+    } @else if $dropdown-align == right {
+        right: 0;
+        left: inherit;
     }
 
     &.left {
@@ -73,5 +53,6 @@
 }
 
 .dropdown {
-    @include dropdown();
+    // @include dropdown();
+    @extend %dropdown-layout;
 }
