--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -41,7 +41,7 @@
 
     &.right { float: right; margin-right: 0; }
 
-    &.inline { margin-bottom: 0; }
+    &.inline { margin-bottom: 0; margin-left: $button-margin-right; }
 
     &.block { display: block; width: 100%; margin-left: 0; margin-right: 0; }
 
