--- a/scss/modules/_grid.scss
+++ b/scss/modules/_grid.scss
@@ -66,7 +66,7 @@
         clear: right;
     } @else if $position == right {
         float: right;
-        clear: left;
+        // clear: left;
     } @else if $position == center {
         margin-left: auto;
         margin-right: auto;
