--- a/scss/modules/_themes.scss
+++ b/scss/modules/_themes.scss
@@ -86,6 +86,35 @@
     }
 }
 
+@mixin panel-colors(
+    $color: white,
+    $color-header: darken($color, 5%),
+    $color-footer: $color-header,
+    $color-text: $color-dark,
+    $color-anchor: $anchor-color,
+    $color-anchor-hover: $anchor-color-hover,
+    $color-border: $color-gray
+) {
+    background-color: $color;
+    color: $color-text;
+    border-color: $color-border;
+
+    a {
+        color: $color-anchor;
+        &:hover { color: $color-anchor-hover; }
+    }
+
+    > header, > hgroup {
+        background-color: $color-header;
+        border-color: $color-border;
+    }
+
+    > footer {
+        background-color: $color-footer;
+        border-color: $color-border;
+    }
+}
+
 @mixin nav-colors(
     $color: $color-primary,
     $color-text: auto,
@@ -170,5 +199,69 @@
 
     #{$type-header-selector} {
         color: $color-header;
+    }
+}
+
+@mixin table-colors(
+    $color: $color-primary,
+    $color-border: $table-border-color,
+    $color-tbody: transparent,
+    $color-tbody-text: $type-base-color,
+    $color-thead: $color,
+    $color-thead-text: auto,
+    $color-tfoot: $color-tbody,
+    $color-tfoot-text: $color-tbody-text,
+    $color-row-even: transparent,
+    $color-row-odd: $color-light
+) {
+    color: $color-tbody-text;
+
+    thead {
+        background-color: $color-thead;
+
+        @if $color-thead-text == auto {
+            color: foregroundColor($color-thead);
+        } @else {
+            color: $color-thead-text;
+        }
+    }
+
+    tfoot {
+        background-color: $color-tfoot;
+
+        @if $color-tfoot-text == auto {
+            color: foregroundColor($color-tfoot);
+        } @else {
+            color: $color-tfoot-text;
+        }
+    }
+
+    tbody {
+        background-color: $color-tbody;
+
+        @if $color-tbody-text == auto {
+            color: foregroundColor($color-tbody);
+        } @else {
+            color: $color-tbody-text;
+        }
+    }
+
+    &, thead, tr, th, td {
+        border-color: $color-border;
+    }
+
+    &.zebra, &.striped {
+
+        tr:nth-child(even) {
+            background-color: $color-row-even;
+        }
+
+        tr:nth-child(odd) {
+            background-color: $color-row-odd;
+        }
+
+        tr:only-child {
+            background-color: transparent;
+        }
     }
 }
