--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -19,6 +19,7 @@
     'modules/_type',
     'modules/_anchors',
     'modules/_nav',
+    'modules/_tabs',
     'modules/_dropdowns',
     'modules/_buttons',
     'modules/_forms',
@@ -37,7 +38,8 @@
     'extensions/_ext_button_transparent',
     'extensions/_ext_form_stacked',
     'extensions/_ext_fieldset_stacked',
-    'extensions/_ext_nav_rdio';
+    'extensions/_ext_nav_rdio',
+    'extensions/_ext_tabs_underline';
 
 /* Import Themes */
 @import
