--- a/scss/settings/_functions.scss
+++ b/scss/settings/_functions.scss
@@ -1,13 +1,21 @@
 
 // Returns foreground (text) color based on background color and lightness threshold
-@function foregroundColor($color, $darken: 35%, $threshold: 65%, $color-light: $color-light, $color-dark: $color-dark) {
-    @if type($color) == color {    
+@function foregroundColor(
+    $color, $darken: 35%, 
+    $threshold: 65%, 
+    $color-light: $color-light, 
+    $color-dark: $color-dark,
+    $color-default: inherit
+) {
+    @if type-of($color) == color {    
         @if lightness($color) > $threshold {
             @return $color-dark;
         } @else {
             @return $color-light;
         }
+    } @else if $color == static {
+        @return false;
     } @else {
-        @return inherit;
+        @return $color-default;
     }
 }
